--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="/css/style.css">
 	<meta charset="UTF-8">
-	<title></title>
+	<title>demo</title>
 </head>
 <body>
-	hola
-	<script src="/js/main.js"></script>
+	<div id="container">
+		<div id="chat">
+			<input type="text">
+			<button>Send</button>
+		</div>
+		<div id="scene"></div>
+	</div>
+	<script src="/js/demo.js"></script>
+	<script src="/js/network.js"></script>
 </body>
 </html>
